--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
                 <h1>Vishnugopy,18</h1>
                 <h4>INTÉGRATEUR WEB</h4>
             </div>
-            <a class="shop" href="shop.html">
+            <a class="shop" href="shop/shop.html">
                 <div><i class="fas fa-shopping-cart"></i></div>
             </a>
         </div>
 
     </header>
     <section>
-        <img class="photo" src="img/001.jpg" alt="image">
+        <img class="photo" src="./img/001.jpg" alt="image">
     </section>
 
     <body>
