--- a/shop/shop.html
+++ b/shop/shop.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>SHOP</title>
-    <link href="shop.css" rel="stylesheet">
+    <link href="shopcss.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img\V.png">
     <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet">
@@ -18,7 +18,7 @@
 <body>
 
     <div class="flex">
-        <a class="bac" href="index.html">
+        <a class="bac" href="../index.html">
             <div><i class="fas fa-home"></i></div>
         </a>
         <h1>SHOP</h1>
@@ -30,13 +30,13 @@
         <div class="par">
 
                 <a href="./web/NY/index.html">
-                    <figure><img class="LOG" src="img/1.png" alt="image">
+                    <figure><img class="LOG" src="../img/1.png" alt="image">
                         <figcaption>Newyear wish</figcaption>
                     </figure>
                 </a>
 
                 <a href="./web/xmas/index.html">
-                    <figure><img class="LOG" src="img/2.png" alt="image">
+                    <figure><img class="LOG" src="../img/2.png" alt="image">
                         <figcaption>Chirismas wish</figcaption>
                     </figure>
                 </a>
@@ -44,7 +44,7 @@
 
         
                 <a href="./web/tamil/index.html">
-                    <figure><img class="LOG" src="img/3.png" alt="image">
+                    <figure><img class="LOG" src="../img/3.png" alt="image">
                         <figcaption>Tamil Year wish</figcaption>
                     </figure>
                 </a>
@@ -57,12 +57,12 @@
 
         <div class="fir">
             <div class="phot">
-                <figure><img src="img/mimi.jpg"></figure>
+                <figure><img src="../img/mimi.jpg"></figure>
             </div>
             <div class="tex">
                 <h3>MIMI HAND WRITE FONT</h3>
                 <h3>&copy;Jeyani2018</h3>
-                <button><a class="btn" href="file/Mimi%20font%20by%20jeyani.zip" download="MIMI FONT BY VISHNU"><h4>Download</h4></a></button>
+                <button><a class="btn" href="../file/Mimi%20font%20by%20jeyani.zip" download="MIMI FONT BY VISHNU"><h4>Download</h4></a></button>
             </div>
         </div>
 
@@ -74,12 +74,12 @@
 
         <div class="fir">
             <div class="phot">
-                <figure><img src="img/all.png"></figure>
+                <figure><img src="../img/all.png"></figure>
             </div>
             <div class="tex">
                 <h3>ADOBE ALL HACK</h3>
                 <h3>CREDIT = Unknow</h3>
-                <button><a class="btn" href="file/Adobe%20all%20hack.zip" download="MIMI FONT BY VISHNU"><h4>Download</h4></a></button>
+                <button><a class="btn" href="../file/Adobe%20all%20hack.zip" download="ADOBE ALL HACK"><h4>Download</h4></a></button>
             </div>
         </div>
 
@@ -91,12 +91,12 @@
         <h2 class="cover">Photoshop brushes</h2>
         <div class="fir">
             <div class="phot">
-                <figure><img src="img/hair.jpg"></figure>
+                <figure><img src="../img/hair.jpg"></figure>
             </div>
             <div class="tex">
                 <h3>FACIAL HAIR For Beard</h3>
                 <h3>&copy;Vishnugopy2018</h3>
-                <button><a class="btn" href="file/Facial%20Hair%20For%20Beard.zip" download="FACIAL HAIR "><h4>Download</h4></a></button>
+                <button><a class="btn" href="../file/Facial%20Hair%20For%20Beard.zip" download="FACIAL HAIR BRUSH"><h4>Download</h4></a></button>
             </div>
         </div>
 
