--- a/shop/shop.html
+++ b/shop/shop.html
@@ -5,7 +5,7 @@
     <title>SHOP</title>
     <link href="shopcss.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img\V.png">
+    <link rel="icon" href="../img/V.png">
     <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed" rel="stylesheet">
@@ -29,13 +29,13 @@
         <h2 class="cover">Les Projets</h2>
         <div class="par">
 
-                <a href="./web/NY/index.html">
+                <a href="../web/x-mas.html">
                     <figure><img class="LOG" src="../img/1.png" alt="image">
                         <figcaption>Newyear wish</figcaption>
                     </figure>
                 </a>
 
-                <a href="./web/xmas/index.html">
+                <a href="../web/x-mas.html">
                     <figure><img class="LOG" src="../img/2.png" alt="image">
                         <figcaption>Chirismas wish</figcaption>
                     </figure>
