--- a/web/x-mas.html
+++ b/web/x-mas.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="shortcut icon" href="PHOTO\2.jpg" />
+    <link rel="shortcut icon" href="../img/xxx.jpg" />
   </head>
   <body>
       <h3>Hi!I Wish you </h3>
@@ -34,7 +34,7 @@
 
 <footer>
   <a href="https://www.instagram.com/__vishnu__10/">&copy;Vishnugopy</a>
-
+<a href="../index.html"><div class="btnf"><h4>Go to Home</h4></div></a>
 </footer>
       <script>
 
@@ -124,6 +124,11 @@ button{
     border-radius:10px;
     width:50%;
 }
+    
+    .cen{
+        width:70%;
+        height:auto;
+    }
 
 </style>
   </body>
