--- a/shop/shop.html
+++ b/shop/shop.html
@@ -43,7 +43,7 @@
 
 
         
-                <a href="./web/tamil/index.html">
+                <a href="../web/tamil.html">
                     <figure><img class="LOG" src="../img/3.png" alt="image">
                         <figcaption>Tamil Year wish</figcaption>
                     </figure>
