--- a/shop/shop.html
+++ b/shop/shop.html
@@ -29,7 +29,7 @@
         <h2 class="cover">Les Projets</h2>
         <div class="par">
 
-                <a href="../web/x-mas.html">
+                <a href="../web/ny.html">
                     <figure><img class="LOG" src="../img/1.png" alt="image">
                         <figcaption>Newyear wish</figcaption>
                     </figure>
