--- a/shop/shop.html
+++ b/shop/shop.html
@@ -51,7 +51,25 @@
 
         </div>
     </section>
+ 
+    
+    
+    <section class="top">
+        <h2 class="cover">GAMES (Android)</h2>
 
+        <div class="fir">
+            <div class="phot">
+                <figure><img src="../img/mimi.jpg"></figure>
+            </div>
+            <div class="tex">
+                <h3>Cool</h3>
+                <h3>&copy;vishnugopy2018</h3>
+                <button><a class="btn" href="../file/CooL.apk" download="Cool BY VISHNU "><h4>Download</h4></a></button>
+            </div>
+        </div>
+
+
+    </section>
     <section class="top">
         <h2 class="cover">Fonts</h2>
 
