--- a/shop/shop.html
+++ b/shop/shop.html
@@ -59,7 +59,7 @@
 
         <div class="fir">
             <div class="phot">
-                <figure><img src="../img/mimi.jpg"></figure>
+                <figure><img src="../img/COOL.PNG"></figure>
             </div>
             <div class="tex">
                 <h3>Cool</h3>
@@ -80,24 +80,8 @@
             <div class="tex">
                 <h3>MIMI HAND WRITE FONT</h3>
                 <h3>&copy;Jeyani2018</h3>
+                <H3>Only capital letters will support keep in mind</H3>
                 <button><a class="btn" href="../file/Mimi%20font%20by%20jeyani.zip" download="MIMI FONT BY VISHNU"><h4>Download</h4></a></button>
-            </div>
-        </div>
-
-
-    </section>
-
-    <section class="top">
-        <h2 class="cover">HACK</h2>
-
-        <div class="fir">
-            <div class="phot">
-                <figure><img src="../img/all.png"></figure>
-            </div>
-            <div class="tex">
-                <h3>ADOBE ALL HACK</h3>
-                <h3>CREDIT = Unknow</h3>
-                <button><a class="btn" href="../file/Adobe%20all%20hack.zip" download="ADOBE ALL HACK"><h4>Download</h4></a></button>
             </div>
         </div>
 
