--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <title>Suthaharan vishnugopy</title>
+    <title>Suthaharan Vishnugopy</title>
     <link href="style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img\V.png">
@@ -18,18 +18,13 @@
 <body>
     <header>
         <div class="flex">
-            <div class="mine">
-                <h1>Vishnugopy,18</h1>
-                <h4>INTÉGRATEUR WEB</h4>
-            </div>
-            <a class="shop" href="shop/shop.html">
-                <div><i class="fas fa-shopping-cart"></i></div>
-            </a>
+             <i class="fas fa-bars"></i>
+             <h1>Vishnugopy</h1>
         </div>
-
     </header>
+    
     <section>
-        <img class="photo" src="./img/001.jpg" alt="image">
+        <div class="photo"></div>
     </section>
 
     <body>
