--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
              <i class="fas fa-bars"></i>
              <h1>Vishnugopy</h1>
         </div>
+
     </header>
-    
     <section>
-        <div class="photo"></div>
+        <img class="photo" src="./img/001.jpg" alt="image">
     </section>
 
     <body>
