kanimaa check this

--- a/index.html
+++ b/index.html
@@ -23,13 +23,27 @@
         </div>
 
     </header>
-    <section>
+    <section class="flex">
         <img class="photo" src="./img/001.jpg" alt="image">
+        <div class="tex">
+         <h3>Hi I am vishnu</h3>
+         <h3>I am 19 years oldBorn in cylon</h3>
+         <h3>Born in cylon,Living in france</h3>
+         <h3>I Can Make</h3>
+            <ul>
+                <li><h3>Fonts</h3></li>
+                <li><h3>Small Web Site</h3></li>
+                <li><h3>Some Small Apps</h3></li>
+                <li><h3>Photoshop Designs</h3></li>
+                <li><h3>Small After Effect Animations</h3></li>
+            </ul>
+            <h3 class="center">You Can Find Them On My Store..</h3>
+        </div>
     </section>
 
     <body>
         <section class="first">
-            <h2 class="cover">Des médias sociaux</h2>
+            <h2 class="cover">You Can Find Me On</h2>
             <div class="flero">
                 <div class="mail"><a href="mailto:vishnugoby0010@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></div>
                 <div class="insta"><a href="https://www.instagram.com/__vishnu__10/"><i class="fab fa-instagram"></i></a></div>
