--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <img class="photo" src="./img/001.jpg" alt="image">
         <div class="tex">
          <h3>Hi I am vishnu</h3>
-         <h3>I am 19 years oldBorn in cylon</h3>
-         <h3>Born in cylon,Living in france</h3>
+         <h3>I am 19 years old,Born in cylon</h3>
+         <h3>Living in france</h3>
          <h3>I Can Make</h3>
             <ul>
                 <li><h3>Fonts</h3></li>
@@ -42,6 +42,9 @@
     </section>
 
     <body>
+        
+        <a href="shop/shop.html"><div class="btnf"><h4>Go to shop</h4></div></a>
+        
         <section class="first">
             <h2 class="cover">You Can Find Me On</h2>
             <div class="flero">
@@ -53,7 +56,7 @@
             </div>
         </section>
 
-<a href="shop/shop.html"><div class="btnf"><h4>Go to shop</h4></div></a>
+
         <footer>
             <h3 class="copy"><a href="https://www.instagram.com/__vishnu__10/">&copy;Vishnugopy2018</a></h3>
         </footer>
