--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <body>
         
-        <a href="shop/shop.html"><div class="btnf"><h4>Go to shop</h4></div></a>
+        <a href="shop/shop.html"><div class="btnf"><h3>Go to shop<span class="dance">>></span></h3></div></a>
         
         <section class="first">
             <h2 class="cover">You Can Find Me On</h2>
