--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
 </head>
 
 <body>
@@ -32,7 +32,7 @@
          <h3>I Can Make</h3>
             <ul>
                 <li><h3>Fonts</h3></li>
-                <li><h3>Small Web Site</h3></li>
+                <li><h3>Interesting Web Sites</h3></li>
                 <li><h3>Some Small Apps</h3></li>
                 <li><h3>Photoshop Designs</h3></li>
                 <li><h3>Small After Effect Animations</h3></li>
@@ -48,11 +48,11 @@
         <section class="first">
             <h2 class="cover">You Can Find Me On</h2>
             <div class="flero">
-                <div class="mail"><a href="mailto:vishnugoby0010@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></div>
-                <div class="insta"><a href="https://www.instagram.com/__vishnu__10/"><i class="fab fa-instagram"></i></a></div>
-                <div class="twitter"><a href="https://twitter.com/vishnugopy10?s=09"><i class="fab fa-twitter"></i></a></div>
-                <div class="snap"><a href="https://www.snapchat.com/add/vishnugoby0010"><i class="fab fa-snapchat"></i></a></div>
-                <div class="youtube"><a href="https://www.youtube.com/channel/UCaTZb02oDb91MMpP9mIY3Qw"><i class="fab fa-youtube"></i></a></div>
+                <a class="mail" href="mailto:vishnugoby0010@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i><h2>Gmail</h2></a>
+                <a class="insta" href="https://www.instagram.com/__vishnu__10/"><i class="fab fa-instagram"></i><h2>Instagram</h2></a>
+                <a class="twitter" href="https://twitter.com/vishnugopy10?s=09"><i class="fab fa-twitter"></i><h2>Twiter</h2></a>
+                <a class="snap" href="https://www.snapchat.com/add/vishnugoby0010"><i class="fab fa-snapchat"></i><h2>Snapchat</h2></a>
+                <a class="youtube" href="https://www.youtube.com/channel/UCaTZb02oDb91MMpP9mIY3Qw"><i class="fab fa-youtube"></i><h2>Toutube</h2></a>
             </div>
         </section>
 
