--- a/index.html
+++ b/index.html
@@ -83,22 +83,25 @@
         <div class="par">
 
                 <a href="../web/ny.html">
-                    <figure><img class="LOG" src="../img/1.png" alt="image">
-                        <figcaption>Newyear wish</figcaption>
+                    <figure>
+                        <img class="log" src="../img/1.png" alt="vishnu's"/>
+                        <figcaption><h3>Newyear wish</h3></figcaption>
                     </figure>
                 </a>
 
                 <a href="../web/x-mas.html">
-                    <figure><img class="LOG" src="../img/2.png" alt="image">
-                        <figcaption>Chirismas wish</figcaption>
+                    <figure>
+                        <img class="log" src="../img/2.png" alt="vishnu's"/>
+                        <figcaption><h3>Chirismas wish</h3></figcaption>
                     </figure>
                 </a>
 
 
         
                 <a href="../web/tamil.html">
-                    <figure><img class="LOG" src="../img/3.png" alt="image">
-                        <figcaption>Tamil Year wish</figcaption>
+                    <figure>
+                        <img class="log" src="../img/3.png" alt="vishnu's"/>
+                        <figcaption><h3>Tamil Year wish</h3></figcaption>
                     </figure>
                 </a>
 
@@ -108,11 +111,11 @@
   <section class="">
         <h2 class="cover">Fonts</h2>
 
-        <div class="fir">
-            <div class="phot">
-                <figure><img src="../img/mimi.jpg"></figure>
+        <div class="sale">
+            <div class="pot">
+                <figure><img class="log" src="../img/mimi.jpg"></figure>
             </div>
-            <div class="tex">
+            <div class="detailes">
                 <h3>MIMI HAND WRITE FONT</h3>
                 <h3>&copy;Jeyani</h3>
                 <H3>Only Capital Letters Will Support Keep In Mind</H3>
