--- a/index.html
+++ b/index.html
@@ -113,13 +113,14 @@
 
         <div class="sale">
             <div class="pot">
-                <figure><img class="log" src="../img/mimi.jpg"></figure>
+                <img class="log" src="../img/mimi.jpg">
             </div>
             <div class="detailes">
-                <h3>MIMI HAND WRITE FONT</h3>
+                <h3>MIMI Hand Write Font</h3>
+                <h3>This Was My first Font So Forgive me if you don't like it</h3>
                 <h3>&copy;Jeyani</h3>
                 <H3>Only Capital Letters Will Support Keep In Mind</H3>
-                <button><a class="btn" href="../file/Mimi%20font%20by%20jeyani.zip" download="MIMI FONT BY VISHNU"><h4>Download</h4></a></button>
+                <a  href="../file/Mimi%20font%20by%20jeyani.zip" download="MIMI FONT BY VISHNU"><div class="btn"><h4>Download</h4></div></a>
             </div>
         </div>
 
