--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
 
                 <a href="../web/ny.html">
                     <figure>
-                        <img class="log" src="../img/1.png" alt="vishnu's"/>
+                        <img class="log" src="img/1.png" alt="vishnu's"/>
                         <figcaption><h3>Newyear wish</h3></figcaption>
                     </figure>
                 </a>
 
                 <a href="../web/x-mas.html">
                     <figure>
-                        <img class="log" src="../img/2.png" alt="vishnu's"/>
+                        <img class="log" src="img/2.png" alt="vishnu's"/>
                         <figcaption><h3>Chirismas wish</h3></figcaption>
                     </figure>
                 </a>
@@ -100,7 +100,7 @@
         
                 <a href="../web/tamil.html">
                     <figure>
-                        <img class="log" src="../img/3.png" alt="vishnu's"/>
+                        <img class="log" src="img/3.png" alt="vishnu's"/>
                         <figcaption><h3>Tamil Year wish</h3></figcaption>
                     </figure>
                 </a>
@@ -113,14 +113,14 @@
 
         <div class="sale">
             <div class="pot">
-                <img class="log" src="../img/mimi.jpg">
+                <img class="log" src="img/mimi.jpg">
             </div>
             <div class="detailes">
                 <h3>MIMI Hand Write Font</h3>
                 <h3>This Was My first Font So Forgive me if you don't like it</h3>
                 <h3>&copy;Jeyani</h3>
                 <H3>Only Capital Letters Will Support Keep In Mind</H3>
-                <a  href="../file/Mimi%20font%20by%20jeyani.zip" download="MIMI FONT BY VISHNU"><div class="btn"><h4>Download</h4></div></a>
+                <a  href="file/Mimi%20font%20by%20jeyani.zip" download="MIMI FONT BY VISHNU"><div class="btn"><h4>Download</h4></div></a>
             </div>
         </div>
 
