--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
         <h3 class="cover">Les Projets</h3>
         <div class="par">
 
-                <a href="../web/ny.html">
+                <a href="web/ny.html">
                     <figure>
                         <img class="log" src="img/1.png" alt="vishnu's"/>
                         <figcaption><h3>Newyear wish</h3></figcaption>
                     </figure>
                 </a>
 
-                <a href="../web/x-mas.html">
+                <a href="web/x-mas.html">
                     <figure>
                         <img class="log" src="img/2.png" alt="vishnu's"/>
                         <figcaption><h3>Chirismas wish</h3></figcaption>
@@ -98,7 +98,7 @@
 
 
         
-                <a href="../web/tamil.html">
+                <a href="web/tamil.html">
                     <figure>
                         <img class="log" src="img/3.png" alt="vishnu's"/>
                         <figcaption><h3>Tamil Year wish</h3></figcaption>
