--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
 </head>
 
 <body>
@@ -116,11 +117,11 @@
                 <img class="log" src="img/mimi.jpg">
             </div>
             <div class="detailes">
-                <h3>MIMI Hand Write Font</h3>
-                <h3>This Was My first Font So Forgive me if you don't like it</h3>
-                <h3>&copy;Jeyani</h3>
+                <h3>MIMI Hand Write Font</h3><br>
+                <h3>This Was My first Font So Forgive me<br> if you don't like it</h3>
                 <H3>Only Capital Letters Will Support Keep In Mind</H3>
-                <a  href="file/Mimi%20font%20by%20jeyani.zip" download="MIMI FONT BY VISHNU"><div class="btn"><h4>Download</h4></div></a>
+                <h3>&copy;Jeyani</h3>
+                <a  href="file/Mimi%20font%20by%20jeyani.zip" download="MIMI FONT BY VISHNU"><div class="btn"><h3>Download</h3></div></a>
             </div>
         </div>
 
