--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
                 <img class="log" src="img/mimi.jpg">
             </div>
             <div class="detailes">
-                <h3>MIMI Hand Write Font</h3><br>
-                <h3>This Was My first Font So Forgive me<br> if you don't like it</h3>
-                <H3>Only Capital Letters Will Support Keep In Mind</H3>
+                <h3>MIMI Hand Write Font<H3>
+                 <H3>Forgive me if you don't like it
+                Only Capital Letters Will Support Keep In Mind</H3>
                 <h3>&copy;Jeyani</h3>
                 <a  href="file/Mimi%20font%20by%20jeyani.zip" download="MIMI FONT BY VISHNU"><div class="btn"><h3>Download</h3></div></a>
             </div>
@@ -129,7 +129,7 @@
                 <img class="log" src="img/kabavi%20font%20cover.jpg">
             </div>
             <div class="detailes">
-                <h3>KABAVI</h3><br>
+                <h3>KABAVI Font</h3><br>
                 <H3>Only Capital Letters Will Support Keep In Mind</H3>
                 <h3>&copy;Vishnugopy2018</h3>
                 <a  href="file/KABAVI%20FONT.zip" download="KABAVI FONT BY VISHNU"><div class="btn"><h3>Download</h3></div></a>
