last for today 18.06

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
             </div>
             <div class="detailes">
                 <h3>MIMI Hand Write Font<H3>
-                 <H3>Forgive me if you don't like it
-                Only Capital Letters Will Support Keep In Mind</H3>
+                 <H3>Forgive me if you don't like it<br>
+                Only Capital Letters Will Support</H3>
                 <h3>&copy;Jeyani</h3>
                 <a  href="file/Mimi%20font%20by%20jeyani.zip" download="MIMI FONT BY VISHNU"><div class="btn"><h3>Download</h3></div></a>
             </div>
@@ -130,7 +130,7 @@
             </div>
             <div class="detailes">
                 <h3>KABAVI Font</h3><br>
-                <H3>Only Capital Letters Will Support Keep In Mind</H3>
+                <H3>Only Capital Letters Will Support<br> Keep In Mind</H3>
                 <h3>&copy;Vishnugopy2018</h3>
                 <a  href="file/KABAVI%20FONT.zip" download="KABAVI FONT BY VISHNU"><div class="btn"><h3>Download</h3></div></a>
             </div>
@@ -154,7 +154,7 @@
             </div>
             <div class="detailes">
                 <h3>Beard brush</h3><br>
-                <h3>Play with brush setting to get realistic hair look</h3>
+                <h3>Play with brush setting to<br> get realistic hair look</h3>
                 <h3>&copy;Vishnugopy2018</h3>
                 <a  href="file/Facial%20Hair%20For%20Beard.zip" download="Facial hair"><div class="btn"><h3>Download</h3></div></a>
             </div>
