--- a/web/tamil.html
+++ b/web/tamil.html
@@ -76,14 +76,13 @@ $(document).ready(function(){
     
 
   
-html{
+body{
 text-align: center;
-background: #24C6DC;
-background: #D3CCE3;
+background:#D3CCE3;
 background: -webkit-linear-gradient(to right, #E9E4F0, #D3CCE3); 
 background: linear-gradient(to right, #E9E4F0, #D3CCE3);
+background-repeat:repeat-y;
 }
-
 h3{
 font-family: 'Bungee', cursive;
 font-size:4vh;
