--- a/web/x-mas.html
+++ b/web/x-mas.html
@@ -66,12 +66,12 @@ $(document).ready(function(){
     
 <style>
   
-html{
+body{
 text-align: center;
-background: #24C6DC;
-background: #D3CCE3;
+background:#D3CCE3;
 background: -webkit-linear-gradient(to right, #E9E4F0, #D3CCE3); 
 background: linear-gradient(to right, #E9E4F0, #D3CCE3);
+background-repeat:repeat-y;
 }
 
 h3{
