--- a/web/tamil.html
+++ b/web/tamil.html
@@ -80,7 +80,7 @@ body{
 text-align: center;
 background:#D3CCE3;
 background: -webkit-linear-gradient(to right, #E9E4F0, #D3CCE3); 
-background: linear-gradient(to right, #E9E4F0, #D3CCE3);
+background: linear-gradient(to right, #E9E4F0,lightblue);
 background-repeat:repeat-y;
 }
     
