--- a/web/x-mas.html
+++ b/web/x-mas.html
@@ -70,7 +70,7 @@ body{
 text-align: center;
 background:#D3CCE3;
 background: -webkit-linear-gradient(to right, #E9E4F0, #D3CCE3); 
-background: linear-gradient(to right, #E9E4F0, #D3CCE3);
+background: linear-gradient(to right, pink, red);
 background-repeat:repeat-y;
 }
 
