--- a/second.html
+++ b/second.html
@@ -65,7 +65,7 @@
         </div>
     </section>
 
-  <section class="">
+  <section>
         <h2 class="cover">Fonts</h2>
 
         <div class="sale">
@@ -80,6 +80,7 @@
                 <a  href="file/Mimi%20font%20by%20jeyani.zip" download="MIMI FONT BY VISHNU"><div class="btn"><h3>Download</h3></div></a>
             </div>
         </div>
+
        <div class="sale">
             <div class="pot">
                 <img class="log" src="img/kabavi%20font%20cover.jpg">
@@ -105,7 +106,7 @@
                 <h3>Beard brush</h3><br>
                 <h3>Play with brush setting to<br> get realistic hair look</h3>
                 <h3>&copy;Vishnugopy2018</h3>
-                <a  href="file/Facial%20Hair%20For%20Beard.zip" download="Facial hair"><div class="btn"><h3>Download</h3></div></a>
+                <a  href="file/Facial%20Hair%20For%20Beard.zip" download="Facial hair"><h3 class="btn">Download</h3></a>
             </div>
         </div>
         </section>
