--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header class="head">
         <div class="flex">
-             <i class="fas fa-bars"></i>
+        <i class="fas fa-hdd"></i>
              <h1>Vishnugopy</h1>
         </div>
 
