--- a/second.html
+++ b/second.html
@@ -19,7 +19,8 @@
 <body>
           <div class="head1" id="store">
         <div class="flex">
-             <i class="fas fa-hdd"></i><h2 class="storhed">STORE</h2>
+             <i class="fas fa-bars"></i>
+             <h2 class="storhed">STORE</h2>
         </div>
     </div>
 <div class="tex">
