--- a/web/x-mas.html
+++ b/web/x-mas.html
@@ -6,10 +6,9 @@
     <link rel="stylesheet" href="CSS\stylesheet.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/js.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Mountains+of+Christmas" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Sirin+Stencil" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="shortcut icon" href="../img/xxx.jpg" />
   </head>
@@ -75,7 +74,7 @@ background-repeat:repeat-y;
 }
 
 h3{
-font-family: 'Bungee', cursive;
+font-family: 'Sirin Stencil', cursive;
 font-size:4vh;
 color: blue;
 text-shadow:
@@ -87,7 +86,7 @@ text-shadow:
 }
 
 h1{
-font-family: 'Berkshire Swash', cursive;
+font-family: 'Cinzel Decorative', cursive;
 font-size:7vh;
 color:#00b0fc;
 text-shadow:
@@ -98,7 +97,7 @@ text-shadow:
     1px 1px 0 #000;
 }
 h2{
-font-family: 'Lobster', cursive;
+font-family: 'Sirin Stencil', cursive;
 font-size:5vh;
 color: white;
 text-shadow:
@@ -112,7 +111,7 @@ text-shadow:
 a{
 font-size:2vh;
 text-decoration: none;
-font-family: 'Lobster', cursive;
+font-family: 'Sirin Stencil', cursive;
 color:white;
 text-shadow:
       3px 3px 0 #000,
@@ -123,8 +122,8 @@ text-shadow:
 }
 
 .cen{
-  height:100%;
-  width:300px;
+  height:auto;
+  width:50%;
 }
 
 .pop-up{
@@ -140,7 +139,7 @@ text-shadow:
 }
 .box h4{
     font-size:3vh;
-    font-family: 'Bungee', cursive;
+    font-family: 'Sirin Stencil', cursive;
     padding:1%;
     margin:0;
 }
@@ -155,7 +154,7 @@ input{
     margin:2% 0 1% 0;
 }
 button{
-    font-family: 'Bungee', cursive;
+    font-family: 'Sirin Stencil', cursive;
     font-size:3vh;
     color:white;
     background-image: linear-gradient(to bottom, #051937, #10325f, #184f8b, #1b6dba, #128deb);
