--- a/web/ny.html
+++ b/web/ny.html
@@ -5,10 +5,8 @@
     <title> Wishes From Your Friend</title>
     <link rel="stylesheet" href="CSS\stylesheet.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Sirin+Stencil" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="shortcut icon" href="../img/2018.png" />
   </head>
@@ -78,7 +76,7 @@ background-repeat:repeat-y;
 }
 
 h3{
-font-family: 'Bungee', cursive;
+font-family: 'Sirin Stencil', cursive;
 font-size:4vh;
 color: blue;
 text-shadow:
@@ -90,7 +88,7 @@ text-shadow:
 }
 
 h1{
-font-family: 'Berkshire Swash', cursive;
+font-family: 'Cinzel Decorative', cursive;
 font-size:7vh;
 color:#00b0fc;
 text-shadow:
@@ -101,7 +99,7 @@ text-shadow:
     1px 1px 0 #000;
 }
 h2{
-font-family: 'Lobster', cursive;
+font-family: 'Sirin Stencil', cursive;
 font-size:5vh;
 color: white;
 text-shadow:
@@ -115,7 +113,7 @@ text-shadow:
 a{
 font-size:2vh;
 text-decoration: none;
-font-family: 'Lobster', cursive;
+font-family: 'Sirin Stencil', cursive;
 color:white;
 text-shadow:
       3px 3px 0 #000,
@@ -143,7 +141,7 @@ text-shadow:
 }
 .box h4{
     font-size:3vh;
-    font-family: 'Bungee', cursive;
+    font-family: 'Sirin Stencil', cursive;
     padding:1%;
     margin:0;
 }
@@ -158,7 +156,7 @@ input{
     margin:2% 0 1% 0;
 }
 button{
-    font-family: 'Bungee', cursive;
+    font-family: 'Sirin Stencil', cursive;
     font-size:3vh;
     color:white;
     background-image: linear-gradient(to bottom, #051937, #10325f, #184f8b, #1b6dba, #128deb);
