--- a/second.html
+++ b/second.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <title>Suthaharan Vishnugopy</title>
@@ -15,105 +15,51 @@
     <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
 </head>
-  <a href="index.html"><div class="btnf"><h3>Go to Contact<span class="dance">>></span></h3></div></a>
+
 <body>
-          <div class="head1" id="store">
+    <header class="head">
         <div class="flex">
-             <i class="fas fa-bars"></i>
-             <h2 class="storhed">STORE</h2>
+        <i class="fas fa-hdd"></i>
+             <h1>Vishnugopy</h1>
         </div>
-    </div>
-<div class="tex">
-         <h3>In This Section You Will Find</h3>
+
+    </header>
+    <section class="flex">
+        <img class="photo" src="./img/001.jpg" alt="image">
+        <div class="tex">
+         <h3>Hi I am vishnu</h3>
+         <h3>I am 19 years old,Born in Ceylon</h3>
+         <h3>Living in france</h3>
+         <h3>I Can Make</h3>
             <ul>
                 <li><h3>Fonts</h3></li>
                 <li><h3>Interesting Web Sites</h3></li>
                 <li><h3>Some Small Apps</h3></li>
-                <li><h3>Photoshop templates</h3></li>
-                <li><h3>After Effect Animations templats</h3></li>
+                <li><h3>Photoshop Designs</h3></li>
+                <li><h3>Small After Effect Animations</h3></li>
             </ul>
-            <h3 class="center">It's all free:)</h3>
-        </div>
-
-
-    <section class="">
-        <h3 class="cover">Les Projets</h3>
-        <div class="par">
-
-                <a href="web/ny.html">
-                    <figure>
-                        <img class="log" src="img/1.png" alt="vishnu's"/>
-                        <figcaption><h3>Newyear wish</h3></figcaption>
-                    </figure>
-                </a>
-
-                <a href="web/x-mas.html">
-                    <figure>
-                        <img class="log" src="img/2.png" alt="vishnu's"/>
-                        <figcaption><h3>Chirismas wish</h3></figcaption>
-                    </figure>
-                </a>
-
-
-
-                <a href="web/tamil.html">
-                    <figure>
-                        <img class="log" src="img/3.png" alt="vishnu's"/>
-                        <figcaption><h3>Tamil Year wish</h3></figcaption>
-                    </figure>
-                </a>
-
+            <h3 class="center">You Can Find Them On My Store..</h3>
         </div>
     </section>
 
-  <section>
-        <h2 class="cover">Fonts</h2>
+    <body>
 
-        <div class="sale">
-            <div class="pot">
-                <img class="log" src="img/mimi.jpg">
-            </div>
-            <div class="detailes">
-                <h3>MIMI Hand Write Font</h3>
-                 <h3>Forgive me if you don't like it<br>
-                Only Capital Letters Will Support</h3>
-                <h3>&copy;Jeyani</h3>
-                <a  href="file/Mimi%20font%20by%20jeyani.zip" download="MIMI FONT BY VISHNU"><div class="btn"><h3>Download</h3></div></a>
-            </div>
-        </div>
+        <a href="second.html"><div class="btnf"><h3>Go to shop<span class="dance">>></span></h3></div></a>
 
-       <div class="sale">
-            <div class="pot">
-                <img class="log" src="img/kabavi%20font%20cover.jpg">
+        <section class="first">
+            <h2 class="cover">You Can Find Me On</h2>
+            <div class="flero">
+                <a class="mail" href="mailto:vishnugoby0010@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i><h2>Gmail</h2></a>
+                <a class="insta" href="https://www.instagram.com/__vishnu__10/"><i class="fab fa-instagram"></i><h2>Instagram</h2></a>
+                <a class="twitter" href="https://twitter.com/_Vishnu_10"><i class="fab fa-twitter"></i><h2>Twiter</h2></a>
+                <a class="snap" href="https://www.snapchat.com/add/vishnugoby0010"><i class="fab fa-snapchat"></i><h2>Snapchat</h2></a>
+                <a class="youtube" href="https://www.youtube.com/channel/UCaTZb02oDb91MMpP9mIY3Qw"><i class="fab fa-youtube"></i><h2>Youtube</h2></a>
+                <a class="git" href="https://github.com/vishnugopy"><i class="fab fa-github"></i><h2>Github</h2></a>
             </div>
-            <div class="detailes">
-                <h3>KABAVI Font</h3><br>
-                <h3>Only Capital Letters Will Support<br> Keep In Mind</h3>
-                <h3>&copy;Vishnugopy2018</h3>
-                <a  href="file/KABAVI%20FONT.zip" download="KABAVI FONT BY VISHNU"><div class="btn"><h3>Download</h3></div></a>
-            </div>
-        </div>
-
-    </section>
-
-    <section>
-         <h2 class="cover">Photoshop brushes</h2>
-
-         <div class="sale">
-            <div class="pot">
-                <img class="log" src="img/hair.jpg">
-            </div>
-            <div class="detailes">
-                <h3>Beard brush</h3><br>
-                <h3>Play with brush setting to<br> get realistic hair look</h3>
-                <h3>&copy;Vishnugopy2018</h3>
-                <a  href="file/Facial%20Hair%20For%20Beard.zip" download="Facial hair"><h3 class="btn">Download</h3></a>
-            </div>
-        </div>
         </section>
 
-        </<body>
-  <footer>
-      <h3 class="copy"><a href="https://www.instagram.com/__vishnu__10/">&copy;Vishnugopy2018</a></h3>
-  </footer>
-</html>
+
+        <footer>
+            <h3 class="copy"><a href="https://www.instagram.com/__vishnu__10/">&copy;Vishnugopy2018</a></h3>
+        </footer>
+    </body>
