--- a/second.html
+++ b/second.html
@@ -44,7 +44,7 @@
 
     <body>
 
-        <a href="second.html"><div class="btnf"><h3>Go to shop<span class="dance">>></span></h3></div></a>
+        <a href="index.html"><div class="btnf"><h3>Go to shop<span class="dance">>></span></h3></div></a>
 
         <section class="first">
             <h2 class="cover">You Can Find Me On</h2>
