--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
 </head>
-  <a href="index.html"><div class="btnf"><h3>Go to Contact<span class="dance">>></span></h3></div></a>
+  <a href="second.html"><div class="btnf"><h3>Go to Contact<span class="dance">>></span></h3></div></a>
 <body>
           <div class="head1" id="store">
         <div class="flex">
              <i class="fas fa-bars"></i>
-             <h2 class="storhed">STORE</h2>
+             <h2 class="storhed">Veteran Studio</h2>
         </div>
     </div>
 <div class="tex">
@@ -37,7 +37,7 @@
 
 
     <section class="">
-        <h3 class="cover">Les Projets</h3>
+        <h3 class="cover">Web Sites</h3>
         <div class="par">
 
                 <a href="web/ny.html">
@@ -60,6 +60,20 @@
                     <figure>
                         <img class="log" src="img/3.png" alt="vishnu's"/>
                         <figcaption><h3>Tamil Year wish</h3></figcaption>
+                    </figure>
+                </a>
+            
+                <a href="https://vishnugopy.github.io/LOVE/">
+                    <figure>
+                        <img class="log" src="img/4.PNG" alt="vishnu's"/>
+                        <figcaption><h3>Love Calculater</h3></figcaption>
+                    </figure>
+                </a>
+            
+                <a href="https://vishnugopy.github.io/updown/">
+                    <figure>
+                        <img class="log" src="img/5.jpg" alt="vishnu's"/>
+                        <figcaption><h3>UPDOWN</h3></figcaption>
                     </figure>
                 </a>
 
