--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
     <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
 </head>
-  <a href="second.html"><div class="btnf"><h3>Go to Contact<span class="dance">>></span></h3></div></a>
 <body>
           <div class="head1" id="store">
         <div class="flex">
-             <i class="fas fa-bars"></i>
+             <a class="menu" href="second.html"><i  class="fas fa-bars"></i></a>
              <h2 class="storhed">Veteran Studio</h2>
         </div>
     </div>
@@ -73,7 +72,7 @@
                 <a href="https://vishnugopy.github.io/updown/">
                     <figure>
                         <img class="log" src="img/5.jpg" alt="vishnu's"/>
-                        <figcaption><h3>UPDOWN</h3></figcaption>
+                        <figcaption><h3>UP DOWN</h3></figcaption>
                     </figure>
                 </a>
 
@@ -82,20 +81,6 @@
 
   <section>
         <h2 class="cover">Fonts</h2>
-
-        <div class="sale">
-            <div class="pot">
-                <img class="log" src="img/mimi.jpg">
-            </div>
-            <div class="detailes">
-                <h3>MIMI Hand Write Font</h3>
-                 <h3>Forgive me if you don't like it<br>
-                Only Capital Letters Will Support</h3>
-                <h3>&copy;Jeyani</h3>
-                <a  href="file/Mimi%20font%20by%20jeyani.zip" download="MIMI FONT BY VISHNU"><div class="btn"><h3>Download</h3></div></a>
-            </div>
-        </div>
-
        <div class="sale">
             <div class="pot">
                 <img class="log" src="img/kabavi%20font%20cover.jpg">
@@ -126,7 +111,8 @@
         </div>
         </section>
 
-        </<body>
+        </body>
+        <a href="second.html"><div class="btnf"><h3>Go to Contact<span class="dance">>></span></h3></div></a>
   <footer>
       <h3 class="copy"><a href="https://www.instagram.com/__vishnu__10/">&copy;Vishnugopy2018</a></h3>
   </footer>
