--- a/second.html
+++ b/second.html
@@ -19,8 +19,8 @@
 <body>
     <header class="head">
         <div class="flex">
-        <i class="fas fa-hdd"></i>
-             <h1>Vishnugopy</h1>
+        <a class="menu" href="index.html"><i class="fas fa-hdd"></i></a>
+        <h1>Vishnugopy</h1>
         </div>
 
     </header>
