--- a/second.html
+++ b/second.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <header class="head">
+    <header class="myhead">
         <div class="flex">
         <a class="menu" href="index.html"><i class="fas fa-hdd"></i></a>
         <h1>Vishnugopy</h1>
@@ -26,19 +26,19 @@
     </header>
     <section class="flex">
         <img class="photo" src="./img/001.jpg" alt="image">
-        <div class="tex">
+        <div class="text">
          <h3>Hi I am vishnu</h3>
-         <h3>I am 19 years old,Born in Ceylon</h3>
+         <h3>I am 19 years old</h3>
          <h3>Living in france</h3>
-         <h3>I Can Make</h3>
+         <h3>I Made</h3>
             <ul>
                 <li><h3>Fonts</h3></li>
                 <li><h3>Interesting Web Sites</h3></li>
-                <li><h3>Some Small Apps</h3></li>
-                <li><h3>Photoshop Designs</h3></li>
-                <li><h3>Small After Effect Animations</h3></li>
+                <li><h3>Apps Made By Me</h3></li>
+                <li><h3>Designs</h3></li>
+                <li><h3>After Effect Animations</h3></li>
             </ul>
-            <h3 class="center">You Can Find Them On My Store..</h3>
+            <h3 class="center">You Can Find My Products On My Store..</h3>
         </div>
     </section>
 
@@ -47,7 +47,7 @@
         <a href="index.html"><div class="btnf"><h3>Go to shop<span class="dance">>></span></h3></div></a>
 
         <section class="first">
-            <h2 class="cover">You Can Find Me On</h2>
+            <h2 class="subheading">You Can Find Me On</h2>
             <div class="flero">
                 <a class="mail" href="mailto:vishnugoby0010@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i><h2>Gmail</h2></a>
                 <a class="insta" href="https://www.instagram.com/__vishnu__10/"><i class="fab fa-instagram"></i><h2>Instagram</h2></a>
