--- a/second.html
+++ b/second.html
@@ -1,48 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <title>Suthaharan Vishnugopy</title>
-    <link href="style.css" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img\V.png">
-    <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
-</head>
-
-<body>
-    <header class="myhead">
-        <div class="flex">
-        <a class="menu" href="index.html"><i class="fas fa-hdd"></i></a>
-        <h1>Vishnugopy</h1>
-        </div>
-
-    </header>
-    <section class="flex">
-        <img class="photo" src="./img/001.jpg" alt="image">
-        <div class="text">
-         <h3>Hi I am vishnu</h3>
-         <h3>I am 19 years old</h3>
-         <h3>Living in france</h3>
-         <h3>I Made</h3>
-            <ul>
-                <li><h3>Fonts</h3></li>
-                <li><h3>Interesting Web Sites</h3></li>
-                <li><h3>Apps Made By Me</h3></li>
-                <li><h3>Designs</h3></li>
-                <li><h3>After Effect Animations</h3></li>
-            </ul>
-            <h3 class="center">You Can Find My Products On My Store..</h3>
-        </div>
-    </section>
-
+    <head>
+        <title>Suthaharan Vishnugopy</title>
+        <link href="style.css" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="img\V.png">
+        <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
+    </head>
     <body>
+        <header class="myhead">
+            <div class="flex">
+                <a class="menu" href="index.html"><i class="fas fa-hdd"></i></a>
+                <h1>Vishnugopy</h1>
+            </div>
+
+        </header>
+        <section class="flex">
+            <img class="photo" src="./img/001.jpg" alt="image">
+            <div class="text">
+                <h3>Hi I am vishnu</h3>
+                <h3>I am 19 years old</h3>
+                <h3>Living in france</h3>
+                <h3>I Made</h3>
+                <ul>
+                    <li><p>Fonts</p></li>
+                    <li><p>Interesting Web Sites</p></li>
+                    <li><p>Apps Made By Me</p></li>
+                    <li><p>Designs</p></li>
+                    <li><p>After Effect Animations</p></li>
+                </ul>
+                <h3 class="center">You Can Find My Products On My Store..</h3>
+            </div>
+        </section>
 
         <a href="index.html"><div class="btnf"><h3>Go to shop<span class="dance">>></span></h3></div></a>
 
@@ -63,3 +59,4 @@
             <h3 class="copy"><a href="https://www.instagram.com/__vishnu__10/">&copy;Vishnugopy2019</a></h3>
         </footer>
     </body>
+</html>
